Small change in Navbar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <li class="header__nav-item">
                 <a href="#" class="header__nav-item-link">Kênh Người Bán</a>
               </li>
-              <li class="header__nav-item  header__nav-item--qr header__nav-item--border-lr">
+              <li class="header__nav-item  header__nav-item--qr">
                 <a href="#" class="header__nav-item-link">Tải ứng dụng</a>
                 <div class="header__nav-qr">
                   <img
@@ -29,7 +29,7 @@
                     alt="qr-code"
                     class="header__nav-qr-img"
                   />
-                  <a href="#" class="header__nav-app">
+                  <a href="https://www.google.com/" class="header__nav-app">
                     <img
                       src="./assets/img/app-shopee.png"
                       alt="qr-code"
@@ -43,7 +43,7 @@
                     <img
                       src="./assets/img/app-gal-shopee.png"
                       alt="qr-code"
-                      class="header__nav-app-img"
+                      class="header__nav-app-img header__nav-app-img--smaller"
                     />
                   </a>
                 </div>
