--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <li class="header__nav-item">
                 <a href="#" class="header__nav-item-link">Kênh Người Bán</a>
               </li>
-              <li class="header__nav-item  header__nav-item--qr">
+              <li class="header__nav-item header__nav-item--qr">
                 <a href="#" class="header__nav-item-link">Tải ứng dụng</a>
                 <div class="header__nav-qr">
                   <img
@@ -52,27 +52,88 @@
               <li class="header__nav-item">
                 Kết nối
                 <a href="#" class="header__nav-item-link"
-                  ><i class="bi bi-facebook"></i
+                  ><i class="header__nav-icon bi bi-facebook"></i
                 ></a>
                 <a href="#" class="header__nav-item-link"
-                  ><i class="bi bi-instagram"></i
+                  ><i class="header__nav-icon bi bi-instagram"></i
                 ></a>
               </li>
             </ul>
             <ul class="header__nav-list">
+              <li class="header__nav-item-right header__nav-item-right--notify">
+                <a href="#" class="header__nav-item-link"
+                  ><i class="header__nav-icon bi bi-bell"></i>Thông Báo</a
+                >
+                <div class="header__arrow-notify"></div>
+                <div class="header__notify">
+                  <div class="header__notify-title">Thông Báo Mới Nhận</div>
+                  <div class="header__notify-news">
+                    <a href="" class="header__notify-link">
+                      <div class="header__notify-img">
+                        <img src="./assets/img/qr-code-home.png" alt="" />
+                      </div>
+                      <div class="header__notify-info">
+                        <p>Xem bài đăng của shoppevn:</p>
+                        <p>CHIA SẺ KẾT QUẢ LẮC XU - TẶNG THƯỞNG THÊM...</p>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="header__notify-news">
+                    <a href="" class="header__notify-link">
+                      <div class="header__notify-img">
+                        <img src="./assets/img/qr-code-home.png" alt="" />
+                      </div>
+                      <div class="header__notify-info">
+                        <p>Xem bài đăng của shoppevn:</p>
+                        <p>CHIA SẺ KẾT QUẢ LẮC XU - TẶNG THƯỞNG THÊM...</p>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="header__notify-news">
+                    <a href="" class="header__notify-link">
+                      <div class="header__notify-img">
+                        <img src="./assets/img/qr-code-home.png" alt="" />
+                      </div>
+                      <div class="header__notify-info">
+                        <p>Xem bài đăng của shoppevn:</p>
+                        <p>CHIA SẺ KẾT QUẢ LẮC XU - TẶNG THƯỞNG THÊM...</p>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="header__notify-user">
+                    <a href="" class="header__notify-link">
+                      <div class="header__notify-img">
+                        <img src="./assets/img/qr-code-home.png" alt="" />
+                      </div>
+                      <div class="header__notify-info">
+                        <p>Xem bài đăng của shoppevn:</p>
+                        <p>CHIA SẺ KẾT QUẢ LẮC XU - TẶNG THƯỞNG THÊM...</p>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="header__notify-user">
+                    <a href="" class="header__notify-link">
+                      <div class="header__notify-img">
+                        <img src="./assets/img/qr-code-home.png" alt="" />
+                      </div>
+                      <div class="header__notify-info">
+                        <p>Xem bài đăng của shoppevn:</p>
+                        <p>CHIA SẺ KẾT QUẢ LẮC XU - TẶNG THƯỞNG THÊM...</p>
+                      </div>
+                    </a>
+                  </div>
+                  <a href="#" class="header__notify-all">Xem tất cả</a>
+                </div>
+              </li>
               <li class="header__nav-item-right">
                 <a href="#" class="header__nav-item-link"
-                  ><i class="bi bi-bell"></i>Thông Báo</a
+                  ><i class="header__nav-icon bi bi-question-circle"></i>Trợ
+                  Giúp</a
                 >
               </li>
               <li class="header__nav-item-right">
                 <a href="#" class="header__nav-item-link"
-                  ><i class="bi bi-question-circle"></i>Trợ Giúp</a
-                >
-              </li>
-              <li class="header__nav-item-right">
-                <a href="#" class="header__nav-item-link"
-                  ><i class="bi bi-question-circle"></i>User</a
+                  ><i class="header__nav-icon bi bi-question-circle"></i>User</a
                 >
               </li>
             </ul>
