Nav notify(fix), arrow(fix). Nav user

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <a href="#" class="header__nav-item-link"
                   ><i class="header__nav-icon bi bi-bell"></i>Thông Báo</a
                 >
-                <div class="header__arrow-notify"></div>
                 <div class="header__notify">
+                  <div class="header__notify-arrow"></div>
                   <div class="header__notify-title">Thông Báo Mới Nhận</div>
                   <div class="header__notify-news">
                     <a href="" class="header__notify-link">
@@ -122,7 +122,7 @@
                       </div>
                     </a>
                   </div>
-                  <a href="#" class="header__notify-all">Xem tất cả</a>
+                  <a href="#" class="header__notify-showAll">Xem tất cả</a>
                 </div>
               </li>
               <li class="header__nav-item-right">
@@ -131,10 +131,17 @@
                   Giúp</a
                 >
               </li>
-              <li class="header__nav-item-right">
+              <li class="header__nav-item-right header__nav-item-right--user">
                 <a href="#" class="header__nav-item-link"
                   ><i class="header__nav-icon bi bi-question-circle"></i>User</a
                 >
+
+                <div class="header__user-opt">
+                  <div class="header__user-arrow"></div>
+                  <a href="#" class="header__user-link">Tài khoản của tôi</a>
+                  <a href="#" class="header__user-link">Đơn mua</a>
+                  <a href="#" class="header__user-link">Đăng xuất</a>
+                </div>
               </li>
             </ul>
           </nav>
