Nav user( change class name)

--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
                   ><i class="header__nav-icon bi bi-question-circle"></i>User</a
                 >
 
-                <div class="header__user-opt">
+                <div class="header__user-list">
                   <div class="header__user-arrow"></div>
-                  <a href="#" class="header__user-link">Tài khoản của tôi</a>
-                  <a href="#" class="header__user-link">Đơn mua</a>
-                  <a href="#" class="header__user-link">Đăng xuất</a>
+                  <a href="#" class="header__user-item">Tài khoản của tôi</a>
+                  <a href="#" class="header__user-item">Đơn mua</a>
+                  <a href="#" class="header__user-item">Đăng xuất</a>
                 </div>
               </li>
             </ul>
