--- a/index.html
+++ b/index.html
@@ -145,6 +145,54 @@
               </li>
             </ul>
           </nav>
+          <div class="header__search">
+            <a href="" class="header__logo">
+              <img src="./assets/img/shoppe-logo.png" alt="shoppe-logo" />
+            </a>
+            <div class="header__search-content">
+              <div class="header__search-wrapper">
+                <input
+                  type="text"
+                  class="header__search-input"
+                  placeholder="Search..."
+                />
+                <div class="header__search-icon">
+                  <i class="bi bi-search"></i>
+                </div>
+              </div>
+              <ul class="header__search-list">
+                <li class="header__search-item">
+                  <a href="" class="header__item-link">Item</a>
+                </li>
+                <li class="header__search-item">
+                  <a href="" class="header__item-link">Item</a>
+                </li>
+                <li class="header__search-item">
+                  <a href="" class="header__item-link">Item</a>
+                </li>
+                <li class="header__search-item">
+                  <a href="" class="header__item-link">Item</a>
+                </li>
+                <li class="header__search-item">
+                  <a href="" class="header__item-link">Item</a>
+                </li>
+                <li class="header__search-item">
+                  <a href="" class="header__item-link">Item</a>
+                </li>
+                <li class="header__search-item">
+                  <a href="" class="header__item-link">Item</a>
+                </li>
+                <li class="header__search-item">
+                  <a href="" class="header__item-link">Item</a>
+                </li>
+              </ul>
+            </div>
+            <div class="header__cart">
+              <i class="header__cart-icon bi bi-cart">
+                <div class="header__cart-numb">3</div>
+              </i>
+            </div>
+          </div>
         </div>
       </header>
       <div class="container"></div>
