small change headers search

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </ul>
           </nav>
           <div class="header__search">
-            <a href="" class="header__logo">
+            <a href="" class="header__logo-link">
               <img src="./assets/img/shoppe-logo.png" alt="shoppe-logo" />
             </a>
             <div class="header__search-content">
@@ -154,36 +154,36 @@
                 <input
                   type="text"
                   class="header__search-input"
-                  placeholder="Search..."
+                  placeholder="Tìm sản phẩm, thương hiệu, và tên shop"
                 />
-                <div class="header__search-icon">
+                <a href="" class="header__search-icon">
                   <i class="bi bi-search"></i>
-                </div>
+                </a>
               </div>
               <ul class="header__search-list">
                 <li class="header__search-item">
-                  <a href="" class="header__item-link">Item</a>
+                  <a href="" class="header__item-link">Hoodie Nam</a>
                 </li>
                 <li class="header__search-item">
-                  <a href="" class="header__item-link">Item</a>
+                  <a href="" class="header__item-link">Sandal Nữ</a>
                 </li>
                 <li class="header__search-item">
-                  <a href="" class="header__item-link">Item</a>
+                  <a href="" class="header__item-link">Áo Nữ</a>
                 </li>
                 <li class="header__search-item">
-                  <a href="" class="header__item-link">Item</a>
+                  <a href="" class="header__item-link">Quần Nam</a>
                 </li>
                 <li class="header__search-item">
-                  <a href="" class="header__item-link">Item</a>
+                  <a href="" class="header__item-link">Dép Nam</a>
                 </li>
                 <li class="header__search-item">
-                  <a href="" class="header__item-link">Item</a>
+                  <a href="" class="header__item-link">Balo Nữ</a>
                 </li>
                 <li class="header__search-item">
-                  <a href="" class="header__item-link">Item</a>
+                  <a href="" class="header__item-link">Váy Trắng</a>
                 </li>
                 <li class="header__search-item">
-                  <a href="" class="header__item-link">Item</a>
+                  <a href="" class="header__item-link">Tất Nữ</a>
                 </li>
               </ul>
             </div>
