header search history, cart-list

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header class="header">
         <div class="grid">
           <nav class="header__nav">
-            <ul class="header__nav-list">
+            <di class="header__nav-list">
               <li class="header__nav-item">
                 <a href="#" class="header__nav-item-link">Kênh Người Bán</a>
               </li>
@@ -58,7 +58,7 @@
                   ><i class="header__nav-icon bi bi-instagram"></i
                 ></a>
               </li>
-            </ul>
+            </di>
             <ul class="header__nav-list">
               <li class="header__nav-item-right header__nav-item-right--notify">
                 <a href="#" class="header__nav-item-link"
@@ -159,7 +159,20 @@
                 <a href="" class="header__search-icon">
                   <i class="bi bi-search"></i>
                 </a>
+                <ul class="header__history-list">
+                  <li class="header__history-title">Lịch Sử Tìm Kiếm</li>
+                  <li class="header__history-item">
+                    <a href="" class="header__history-link">Item</a>
+                  </li>
+                  <li class="header__history-item">
+                    <a href="" class="header__history-link">Item</a>
+                  </li>
+                  <li class="header__history-item">
+                    <a href="" class="header__history-link">Item</a>
+                  </li>
+                </ul>
               </div>
+
               <ul class="header__search-list">
                 <li class="header__search-item">
                   <a href="" class="header__item-link">Hoodie Nam</a>
@@ -188,9 +201,59 @@
               </ul>
             </div>
             <div class="header__cart">
-              <i class="header__cart-icon bi bi-cart">
-                <div class="header__cart-numb">3</div>
-              </i>
+              <div class="header__cart-wrapper">
+                <a href="" class="header__cart-icon-link">
+                  <i class="header__cart-icon bi bi-cart">
+                    <div class="header__cart-numb">3</div>
+                  </i>
+                </a>
+                <div class="header__cart-arrow"></div>
+                <div class="header__cart-list">
+                  <div class="header__cart-title">Sản phẩm mới thêm</div>
+                  <div class="header__cart-item">
+                    <a href="" class="header__cart-link">
+                      <img
+                        class="header__cart-img"
+                        src="./assets/img/qr-code-home.png"
+                        alt=""
+                      />
+                      <div class="header__cart-name">
+                        Bột RU58841 pha vào các sản ph
+                      </div>
+                      <div class="header__cart-price">150.000</div>
+                    </a>
+                  </div>
+                  <div class="header__cart-item">
+                    <a href="" class="header__cart-link">
+                      <img
+                        class="header__cart-img"
+                        src="./assets/img/qr-code-home.png"
+                        alt=""
+                      />
+                      <div class="header__cart-name">
+                        Bột RU58841 pha vào các sản ph
+                      </div>
+                      <div class="header__cart-price">150.000</div>
+                    </a>
+                  </div>
+                  <div class="header__cart-item">
+                    <a href="" class="header__cart-link">
+                      <img
+                        class="header__cart-img"
+                        src="./assets/img/qr-code-home.png"
+                        alt=""
+                      />
+                      <div class="header__cart-name">
+                        Bột RU58841 pha vào các sản ph
+                      </div>
+                      <div class="header__cart-price">150.000</div>
+                    </a>
+                  </div>
+                  <div class="header__cart-item">
+                    <button class="header__cart-button">Xem giỏ hàng</button>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
