--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header class="header">
         <div class="grid">
           <nav class="header__nav">
-            <di class="header__nav-list">
+            <div class="header__nav-list">
               <li class="header__nav-item">
                 <a href="#" class="header__nav-item-link">Kênh Người Bán</a>
               </li>
@@ -58,7 +58,7 @@
                   ><i class="header__nav-icon bi bi-instagram"></i
                 ></a>
               </li>
-            </di>
+            </div>
             <ul class="header__nav-list">
               <li class="header__nav-item-right header__nav-item-right--notify">
                 <a href="#" class="header__nav-item-link"
@@ -131,9 +131,15 @@
                   Giúp</a
                 >
               </li>
-              <li class="header__nav-item-right header__nav-item-right--user">
-                <a href="#" class="header__nav-item-link"
-                  ><i class="header__nav-icon bi bi-question-circle"></i>User</a
+              <!-- Logged:  header__nav-item-right--user -->
+              <li class="header__nav-item-right header__nav-item-right--reg">
+                <div class="header__nav-reg">
+                  <a href="" class="header__nav-login">Đăng ký</a>
+                  <a href="" class="header__nav-register">Đăng nhập</a>
+                </div>
+                <a href="#" class="header__nav-icon-link"
+                  ><i class="header__nav-icon bi bi-question-circle"></i
+                  >User2131243</a
                 >
 
                 <div class="header__user-list">
@@ -207,51 +213,60 @@
                     <div class="header__cart-numb">3</div>
                   </i>
                 </a>
-                <div class="header__cart-arrow"></div>
-                <div class="header__cart-list">
-                  <div class="header__cart-title">Sản phẩm mới thêm</div>
-                  <div class="header__cart-item">
-                    <a href="" class="header__cart-link">
-                      <img
-                        class="header__cart-img"
-                        src="./assets/img/qr-code-home.png"
-                        alt=""
-                      />
-                      <div class="header__cart-name">
-                        Bột RU58841 pha vào các sản ph
-                      </div>
-                      <div class="header__cart-price">150.000</div>
-                    </a>
+                <!-- No cart: header__cart-list--empty -->
+                <div class="header__cart-list header__cart-list--empty">
+                  <div class="header__cart-arrow"></div>
+                  <div class="header__cart-list-container">
+                    <div class="header__cart-title">Sản phẩm mới thêm</div>
+                    <div class="header__cart-item">
+                      <a href="" class="header__cart-link">
+                        <img
+                          class="header__cart-img"
+                          src="./assets/img/qr-code-home.png"
+                          alt=""
+                        />
+                        <div class="header__cart-name">
+                          Bột RU58841 pha vào các sản ph
+                        </div>
+                        <div class="header__cart-price">150.000</div>
+                      </a>
+                    </div>
+                    <div class="header__cart-item">
+                      <a href="" class="header__cart-link">
+                        <img
+                          class="header__cart-img"
+                          src="./assets/img/qr-code-home.png"
+                          alt=""
+                        />
+                        <div class="header__cart-name">
+                          Bột RU58841 pha vào các sản ph
+                        </div>
+                        <div class="header__cart-price">150.000</div>
+                      </a>
+                    </div>
+                    <div class="header__cart-item">
+                      <a href="" class="header__cart-link">
+                        <img
+                          class="header__cart-img"
+                          src="./assets/img/qr-code-home.png"
+                          alt=""
+                        />
+                        <div class="header__cart-name">
+                          Bột RU58841 pha vào các sản ph
+                        </div>
+                        <div class="header__cart-price">150.000</div>
+                      </a>
+                    </div>
+                    <div class="header__cart-item">
+                      <button class="header__cart-button">Xem giỏ hàng</button>
+                    </div>
                   </div>
-                  <div class="header__cart-item">
-                    <a href="" class="header__cart-link">
-                      <img
-                        class="header__cart-img"
-                        src="./assets/img/qr-code-home.png"
-                        alt=""
-                      />
-                      <div class="header__cart-name">
-                        Bột RU58841 pha vào các sản ph
-                      </div>
-                      <div class="header__cart-price">150.000</div>
-                    </a>
-                  </div>
-                  <div class="header__cart-item">
-                    <a href="" class="header__cart-link">
-                      <img
-                        class="header__cart-img"
-                        src="./assets/img/qr-code-home.png"
-                        alt=""
-                      />
-                      <div class="header__cart-name">
-                        Bột RU58841 pha vào các sản ph
-                      </div>
-                      <div class="header__cart-price">150.000</div>
-                    </a>
-                  </div>
-                  <div class="header__cart-item">
-                    <button class="header__cart-button">Xem giỏ hàng</button>
-                  </div>
+                  <img
+                    src="./assets/img/no-cart.png"
+                    class="header__cart-empty-img"
+                    alt="no-cart"
+                  />
+                  <div class="header__cart-empty-info">Chưa có sản phẩm</div>
                 </div>
               </div>
             </div>
