quick fix notify

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 >
               </li>
               <!-- Logged:  header__nav-item-right--user -->
-              <li class="header__nav-item-right header__nav-item-right--reg">
+              <div class="header__nav-item-right header__nav-item-right--reg">
                 <div class="header__nav-reg">
                   <a href="" class="header__nav-login">Đăng ký</a>
                   <a href="" class="header__nav-register">Đăng nhập</a>
@@ -148,7 +148,7 @@
                   <a href="#" class="header__user-item">Đơn mua</a>
                   <a href="#" class="header__user-item">Đăng xuất</a>
                 </div>
-              </li>
+              </div>
             </ul>
           </nav>
           <div class="header__search">
