--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="app">
       <header class="header">
-        <div class="grid">
+        <div class="grid grid__fullheight ">
           <nav class="header__nav">
             <div class="header__nav-list">
               <li class="header__nav-item">
@@ -273,7 +273,8 @@
           </div>
         </div>
       </header>
-      <div class="container"></div>
+      <div class="container">
+      </div>
       <footer class="footer"></footer>
     </div>
   </body>
